# GSD-Orchestrator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY_RULES.md  config.yaml  config.yaml.example  logs.sh  pyproject.toml  restart.sh  setup.sh  start.sh  stop.sh
docs/: App-Bridge-연동-정의서.md  velog-gsd-orchestrator.md  보안-가이드.md  사용자-가이드.md  아키텍처.md  에이전틱-AI-비교.md  외부-앱-통합-가이드.md  외부-연동-가이드.md  장애-복구-가이드.md
src/gsd_orchestrator/: __main__.py  api.py  archiver.py  attachment_handler.py  config.py  inbox_processor.py  inbox_writer.py  orchestrator.py  outbox_sender.py  text_cleaner.py
src/gsd_orchestrator/app_bridge/: __init__.py  command_writer.py  correlator.py  router.py
src/gsd_orchestrator/channels/: __init__.py  base.py  manager.py  slack.py  telegram.py
src/gsd_orchestrator/mcp_server/: __init__.py  __main__.py  server.py
src/gsd_orchestrator/mcp_server/tools/: __init__.py  batch.py  files.py  search.py  tree.py
tests/: conftest.py  test_api.py  test_app_bridge.py  test_archiver.py  test_attachment_handler.py  test_channels.py  test_config.py  test_context_continuity.py  test_failure_recovery.py  test_gsd_session.py  test_inbox_writer.py  test_mcp_security.py  test_mcp_tools.py  test_outbox_failure.py  test_outbox_sender.py  test_stale_check.py  test_text_cleaner.py  test_workqueue.py
tests/fixtures/: echo_app.py
